[package]
name = "bitcaskplus"
version = "0.1.0"
authors = ["Grcm"]
edition = "2024"

[dependencies]
clap = "4.5.55"
tempfile = "3.24.0"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
walkdir = "2.2.7"
