[package]
name = "bitcaskplus"
version = "0.1.0"
authors = ["Grcm"]
edition = "2024"

[dependencies]
clap = "4.5.55"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
crc32fast = "=1.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
walkdir = "2.2.7"
tempfile = "3.24.0"
